content/consul/v1.8.x/content/commands/acl/token/clone.mdx
---
layout: commands
page_title: 'Commands: ACL Token Clone'
sidebar_title: clone
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-04T10:42:51-06:00
last_modified: 2025-11-04T10:42:51-06:00
# END AUTO GENERATED METADATA
---

# Consul ACL Token Clone

Command: `consul acl token clone`

The `acl token clone` command clones an existing token.

## Usage

Usage: `consul acl token clone [options]`

#### API Options

@include 'http_api_options_client.mdx'

@include 'http_api_options_server.mdx'

#### Command Options

- `-description=<string>` - A description of the new cloned token.

- `-id=<string>` - The Accessor ID of the token to clone. It may be specified
  as a unique ID prefix but will error if the prefix matches multiple token
  Accessor IDs. The special value of 'anonymous' may be provided instead of
  the anonymous tokens accessor ID

- `-format={pretty|json}` - Command output format. The default value is `pretty`.

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

## Examples

Clone a token:

```shell-session
$ consul acl token clone -id 59f8 -description "Clone of Super User"
Token cloned successfully.
AccessorID:   dcfa52ed-9288-b3ff-056d-255ef69d2d88
SecretID:     0005d17e-5bb2-7e8b-7bfa-15f2eee9ad14
Description:  Clone of Super User
Local:        false
Create Time:  2018-10-22 16:26:02.909096 -0400 EDT
Policies:
   00000000-0000-0000-0000-000000000001 - global-management
```
